Fixed error with print page

--- a/Code/Front_End/Pages/Print.cshtml
+++ b/Code/Front_End/Pages/Print.cshtml
@@ -84,7 +84,7 @@
         Microsoft.AspNetCore.Html.IHtmlContent scheduleJson = Html.Raw("");
         try
         {
-            scheduleJson = Html.Raw(AdvisingModel.CurrentSchedule);
+            scheduleJson = Html.Raw(AdvisingModel.LoadBaseCase());
         }
         catch (NullReferenceException)
         {
