Modified authentication functionality

--- a/Code/Front_End/Pages/Index.cshtml
+++ b/Code/Front_End/Pages/Index.cshtml
@@ -5,6 +5,12 @@
     Layout = null;
 }
 
+@{ 
+    IndexModel.LoggedIn = false;
+    IndexModel.Administrator = false;
+    IndexModel.CurrentUser = "";
+}
+
 <!DOCTYPE html>
 <html>
 <head>
