--- a/Code/Front_End/Pages/_Layout.cshtml
+++ b/Code/Front_End/Pages/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -30,7 +31,7 @@
 
 
         <div class="PageRow Flex">
-            <div class="WideFlex" id="Logout">Logged in as: <span id="CurrentUser">Admin</span> <a href="">[ Logout ]</a></div>
+            <div class="WideFlex" id="Logout">Logged in as: <span id="CurrentUser">@IndexModel.CurrentUser</span> <a href="Index"> [ Logout ]</a></div>
             <div class="WideFlex" id="Navigation">
                 <span id="NavLinks">
                     <a href="Index">Home</a> |
