--- a/Code/Front_End/Pages/_Layout.cshtml
+++ b/Code/Front_End/Pages/_Layout.cshtml
@@ -34,11 +34,20 @@
             <div class="WideFlex" id="Logout">Logged in as: <span id="CurrentUser">@IndexModel.CurrentUser</span> <a href="Index"> [ Logout ]</a></div>
             <div class="WideFlex" id="Navigation">
                 <span id="NavLinks">
-                    <a href="Index">Home</a> |
-                    <a href="StudentAdvising">Advising</a> |
-                    <a href="ManageCourses">Course Management</a> |
-                    <a href="ManageDegrees">Degree Management</a> |
-                    <a href="UserManagement">User Management</a>
+                    @{ 
+                        string AdminLinks = "";
+                        if (IndexModel.LoggedIn)
+                        {
+                            AdminLinks += " | <a href=\"StudentAdvising\">Advising</a>";
+
+                            if (IndexModel.Administrator)
+                            {
+                                AdminLinks += " | <a href=\"ManageCourses\">Course Management</a> | <a href=\"ManageDegrees\">Degree Management</a> | <a href=\"UserManagement\">User Management</a>";
+                            }
+                        }
+                    }
+                    <a href="Index">Home</a>@Html.Raw(AdminLinks)
+                    
                 </span>
             </div>
         </div>
