--- a/Code/Front_End/Pages/Advising.cshtml
+++ b/Code/Front_End/Pages/Advising.cshtml
@@ -28,8 +28,13 @@
 }
 
 <script>
-    var ExampleSchedule = '@Html.Raw(AdvisingModel.GetStudentPlan())';
-    var BaseCase = '@Html.Raw(AdvisingModel.LoadBaseCase())';
+    @{ 
+        string studentplan = Html.Raw(AdvisingModel.GetStudentPlan()).ToString();
+        string basecase = Html.Raw(AdvisingModel.LoadBaseCase()).ToString();
+    }
+    
+    var StudentSchedule = '@studentplan';
+    var BaseCase = '@basecase';
 
     $(document).ready(function () {
         $("#Loading").hide();
