change password page

--- a/Code/Front_End/Pages/ChangePassword.cshtml
+++ b/Code/Front_End/Pages/ChangePassword.cshtml
@@ -1,4 +1,36 @@
 ﻿@page
-@model ChangePasswordModel
+@model CwuAdvising.Pages.ChangePasswordModel
 @{
+    ViewData["Title"] = "Change Password";
 }
+
+<div class="Title">Change Password</div>
+
+
+<div style="display: flex; flex-direction: column; align-items: center;">
+    <div style="color: red;">@ChangePasswordModel.ChangePasswordErrorMessage</div>
+    @{
+        ChangePasswordModel.ChangePasswordErrorMessage = "";
+    }
+    <form method="post">
+        <div id="LoginBox" class="Border">
+            <div class="Title">Add user: </div>
+            <div class="Flex">
+                <div class="LabelLeft"><label asp-for="UpdatedUser.OldPassword">Old Password</label></div>
+                <div class="LabelRight"><input type="password" asp-for="UpdatedUser.OldPassword" /></div>
+            </div>
+            <div><span asp-validation-for="CreateUser.OldPassword" style="color: red;"></span></div>
+            <div class="Flex">
+                <div class="LabelLeft"><label asp-for="UpdatedUser.NewPasswordOne">New Password</label></div>
+                <div class="LabelRight"><input type="password" asp-for="UpdatedUser.NewPasswordOne"></div>
+            </div>
+            <div><span asp-validation-for="CreateUser.PasswordOne" style="color: red;"></span></div>
+            <div class="Flex">
+                <div class="LabelLeft"><label asp-for="UpdatedUser.NewPasswordTwo">Re-Enter New Password</label></div>
+                <div class="LabelRight"><input type="password" asp-for="UpdatedUser.NewPasswordTwo"></div>
+            </div>
+            <div><span asp-validation-for="UpdatedUser.NewPasswordTwo" style="color: red;"></span></div>
+            <button type="submit" class="BigButton">Change Password</button>
+        </div>
+    </form>
+</div>
