Fixed Nicks mistake

--- a/Code/Front_End/Pages/ChangePassword.cshtml
+++ b/Code/Front_End/Pages/ChangePassword.cshtml
@@ -19,12 +19,12 @@
                 <div class="LabelLeft"><label asp-for="UpdatedUser.OldPassword">Old Password</label></div>
                 <div class="LabelRight"><input type="password" asp-for="UpdatedUser.OldPassword" /></div>
             </div>
-            <div><span asp-validation-for="CreateUser.OldPassword" style="color: red;"></span></div>
+            <div><span asp-validation-for="UpdatedUser.OldPassword" style="color: red;"></span></div>
             <div class="Flex">
                 <div class="LabelLeft"><label asp-for="UpdatedUser.NewPasswordOne">New Password</label></div>
                 <div class="LabelRight"><input type="password" asp-for="UpdatedUser.NewPasswordOne"></div>
             </div>
-            <div><span asp-validation-for="CreateUser.PasswordOne" style="color: red;"></span></div>
+            <div><span asp-validation-for="UpdatedUser.NewPasswordTwo" style="color: red;"></span></div>
             <div class="Flex">
                 <div class="LabelLeft"><label asp-for="UpdatedUser.NewPasswordTwo">Re-Enter New Password</label></div>
                 <div class="LabelRight"><input type="password" asp-for="UpdatedUser.NewPasswordTwo"></div>
