Removed redundant menu link

--- a/Code/Front_End/Pages/_Layout.cshtml
+++ b/Code/Front_End/Pages/_Layout.cshtml
@@ -46,7 +46,7 @@
                             }
                         }
                     }
-                    <a href="Index">Home</a>@Html.Raw(AdminLinks)
+                    @Html.Raw(AdminLinks)
                     
                 </span>
             </div>
