Fixed Print Error

--- a/Code/Front_End/Pages/Print.cshtml
+++ b/Code/Front_End/Pages/Print.cshtml
@@ -141,7 +141,7 @@
             var schedule = AdvisingModel.CurrentSchedule;
             studentName = AdvisingModel.CurrentStudent.Name;
             studentId = AdvisingModel.CurrentStudent.ID;
-            studentYear = AdvisingModel.CurrentStudent.CatalogYear;
+            studentYear = AdvisingModel.CurrentStudent.AcademicYear;
             studentDegree = AdvisingModel.CurrentStudent.Degree;
         }
         catch (NullReferenceException)
